Use java 21 version, and add pageable endpoints, use Q... files, and separate Dto and csvDto.
