# openapi-doc/survey-openapi.yaml
@@ -205,15 +205,45 @@ paths:
         schema:
           type: integer
           format: int64
+      - name: page
+        in: query
+        description: Zero-based page index (0..N)
+        required: false
+        schema:
+          type: integer
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          default:
+          - "surveyId,ASC"
+          items:
+            type: string
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/SurveyDto"
+                $ref: "#/components/schemas/PageSurveyDto"
+              examples:
+                PageSurveyDtoExample:
+                  summary: Paged response with SurveyDto objects
+                  description: PageSurveyDtoExample
+                  externalValue: /openapi/examples/page-survey-example.json
         "400":
           description: "Runtime error: HttpStatus.BAD_REQUEST"
           content:
@@ -232,15 +262,46 @@ paths:
       - survey-controller
       summary: Get survey statistic list
       operationId: getAllStatisticSurveys
+      parameters:
+      - name: page
+        in: query
+        description: Zero-based page index (0..N)
+        required: false
+        schema:
+          type: integer
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          default:
+          - "surveyId,ASC"
+          items:
+            type: string
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/SurveyStatisticDto"
+                $ref: "#/components/schemas/PageStatisticDto"
+              examples:
+                PageStatisticDtoExample:
+                  summary: Paged response with SurveyStatisticDto objects
+                  description: PageStatisticDtoExample
+                  externalValue: /openapi/examples/page-statistic-example.json
         "400":
           description: "Runtime error: HttpStatus.BAD_REQUEST"
           content:
@@ -266,15 +327,45 @@ paths:
         schema:
           type: integer
           format: int64
+      - name: page
+        in: query
+        description: Zero-based page index (0..N)
+        required: false
+        schema:
+          type: integer
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          default:
+          - "memberId,ASC"
+          items:
+            type: string
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/MemberDto"
+                $ref: "#/components/schemas/PageMemberDto"
+              examples:
+                PageMemberDtoExample:
+                  summary: Paged response with MemberDto objects
+                  description: PageMemberDtoExample
+                  externalValue: /openapi/examples/page-member-example.json
         "400":
           description: "Runtime error: HttpStatus.BAD_REQUEST"
           content:
@@ -300,15 +391,45 @@ paths:
         schema:
           type: integer
           format: int64
+      - name: page
+        in: query
+        description: Zero-based page index (0..N)
+        required: false
+        schema:
+          type: integer
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          default:
+          - "memberId,ASC"
+          items:
+            type: string
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/MemberDto"
+                $ref: "#/components/schemas/PageMemberDto"
+              examples:
+                PageMemberDtoExample:
+                  summary: Paged response with MemberDto objects
+                  description: PageMemberDtoExample
+                  externalValue: /openapi/examples/page-member-example.json
         "400":
           description: "Runtime error: HttpStatus.BAD_REQUEST"
           content:
@@ -327,26 +448,26 @@ components:
       type: object
       description: Survey record
       properties:
-        Survey Id:
+        surveyId:
           type: integer
           format: int64
           description: surveyId
           example: 1
-        Name:
+        name:
           type: string
           description: name
           example: Survey 01
-        Expected completes:
+        expectedCompletes:
           type: integer
           format: int32
           description: expectedCompletes
           example: 10
-        Completion points:
+        completionPoints:
           type: integer
           format: int32
           description: completionPoints
           example: 8
-        Filtered points:
+        filteredPoints:
           type: integer
           format: int32
           description: filteredPoints
@@ -441,12 +562,12 @@ components:
       type: object
       description: Status record
       properties:
-        Status Id:
+        statusId:
           type: integer
           format: int64
           description: statusId
           example: 4
-        Name:
+        name:
           type: string
           description: name
           example: Completed
@@ -454,22 +575,22 @@ components:
       type: object
       description: Participation record
       properties:
-        Member Id:
+        memberId:
           type: integer
           format: int64
           description: memberId
           example: 4
-        Survey Id:
+        surveyId:
           type: integer
           format: int64
           description: surveyId
           example: 4
-        Status:
+        statusId:
           type: integer
           format: int64
           description: statusId
           example: 4
-        Length:
+        length:
           type: integer
           format: int32
           description: length
@@ -478,23 +599,81 @@ components:
       type: object
       description: Member record
       properties:
-        Member Id:
+        memberId:
           type: integer
           format: int64
           description: memberId
           example: 1
-        Full name:
+        fullName:
           type: string
           description: fullName
           example: Gipsz Jakab
-        E-mail address:
+        emailAddress:
           type: string
           description: emailAddress
           example: gipsz.jakab@mail.hu
-        Is Active:
+        isActive:
           type: boolean
           description: isActive
           example: false
+    PageSurveyDto:
+      type: object
+      description: Page of SurveyDto
+      properties:
+        content:
+          type: array
+          description: content
+          items:
+            $ref: "#/components/schemas/SurveyDto"
+        pageNumber:
+          type: integer
+          format: int32
+          description: pageNumber
+          example: 1
+        pageSize:
+          type: integer
+          format: int32
+          description: pageSize
+          example: 10
+        totalElements:
+          type: integer
+          format: int64
+          description: totalElements
+          example: 3
+        numberOfElements:
+          type: integer
+          format: int32
+          description: numberOfElements
+          example: 3
+    PageStatisticDto:
+      type: object
+      description: Page of SurveyStatisticDto
+      properties:
+        content:
+          type: array
+          description: content
+          items:
+            $ref: "#/components/schemas/SurveyStatisticDto"
+        pageNumber:
+          type: integer
+          format: int32
+          description: pageNumber
+          example: 1
+        pageSize:
+          type: integer
+          format: int32
+          description: pageSize
+          example: 10
+        totalElements:
+          type: integer
+          format: int64
+          description: totalElements
+          example: 3
+        numberOfElements:
+          type: integer
+          format: int32
+          description: numberOfElements
+          example: 3
     SurveyStatisticDto:
       type: object
       description: Survey Statistic record
@@ -504,23 +683,23 @@ components:
           format: int64
           description: surveyId
           example: 1
-        surveyName:
+        name:
           type: string
           description: name
           example: Survey 01
         numberOfCompletes:
           type: integer
-          format: int64
+          format: int32
           description: numberOfCompletes
           example: 15
         numberOfFilteredParticipants:
           type: integer
-          format: int64
+          format: int32
           description: numberOfFilteredParticipants
           example: 6
         numberOfRejectedParticipants:
           type: integer
-          format: int64
+          format: int32
           description: numberOfRejectedParticipants
           example: 1
         averageLengthOfTimeSpentOnSurvey:
@@ -528,3 +707,32 @@ components:
           format: double
           description: averageLengthOfTimeSpentOnSurvey
           example: 1.5
+    PageMemberDto:
+      type: object
+      description: Page of MemberDto
+      properties:
+        content:
+          type: array
+          description: content
+          items:
+            $ref: "#/components/schemas/MemberDto"
+        pageNumber:
+          type: integer
+          format: int32
+          description: pageNumber
+          example: 1
+        pageSize:
+          type: integer
+          format: int32
+          description: pageSize
+          example: 10
+        totalElements:
+          type: integer
+          format: int64
+          description: totalElements
+          example: 3
+        numberOfElements:
+          type: integer
+          format: int32
+          description: numberOfElements
+          example: 3
